HTML & CSS | Cards Responsiveness + Fix Media Player Dimensions and his Overflow on Y Ax

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -8,8 +8,14 @@ html {
     font-family: "Montserrat", sans-serif;
 }
 
+
+main {
+    overflow-y:hidden;
+}
+
 img {
     max-width:100%;
+    display:block;
 }
 
 ul {
